kubernetes-yaml-files/python-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
spec:
  replicas: 3
  selector:
    matchLabels:
      name: python-app
  template:
    metadata:
      labels:
        name: python-app
    spec:
      containers:
      - name: python-app
        image: gcr.io/zoz-project-375711/gcp-python:latest
        ports:
        - containerPort: 80
