kubernetes-yaml-files/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: gcr.io/zoz-project-375711/redis-gcr:latest
        ports:
        - containerPort: 6379
~
